Se crean los articulos secundarios

--- a/h5.html
+++ b/h5.html
@@ -61,6 +61,93 @@
       </div>
       <figure><img src="./imagen/img-post-1.png" alt="" /></figure>
     </section>
+    <section class="secondary-articules">
+      <div class="main-articule2">
+        <h2>Feugiat sodales at nullam tellus.</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. In laborum
+          modi maxime optio doloribus aliquam nemo dolor ipsum veritatis,
+          laboriosam, excepturi voluptas reprehenderit enim. Similique
+          praesentium nobis facere blanditiis incidunt.
+        </p>
+        <div class="articule-bottom">
+          <div>
+            <a href="">Samatha Leuthex</a>
+            <h3>May 5, 3 min read</h3>
+          </div>
+          <nav>
+            <ul>
+              <li>
+                <a href=""><img src="./imagen/icon-save.png" alt="" /></a>
+              </li>
+              <li>
+                <a href=""><img src="./imagen/icon-share.png" alt="" /></a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+      <figure><img src="./imagen/img-post-2.png" alt="" /></figure>
+      <div class="main-articule2">
+        <h2>Feugiat sodales at nullam tellus.</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. In laborum
+          modi maxime optio doloribus aliquam nemo dolor ipsum veritatis,
+          laboriosam, excepturi voluptas reprehenderit enim. Similique
+          praesentium nobis facere blanditiis incidunt.
+        </p>
+        <div class="articule-bottom">
+          <div>
+            <a href="">Samatha Leuthex</a>
+            <h3>May 5, 3 min read</h3>
+          </div>
+          <nav>
+            <ul>
+              <li>
+                <a href=""><img src="./imagen/icon-save.png" alt="" /></a>
+              </li>
+              <li>
+                <a href=""><img src="./imagen/icon-share.png" alt="" /></a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+      <figure><img src="./imagen/img-post-3.png" alt="" /></figure>
+      <div class="main-articule2">
+        <h2>Feugiat sodales at nullam tellus.</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. In laborum
+          modi maxime optio doloribus aliquam nemo dolor ipsum veritatis,
+          laboriosam, excepturi voluptas reprehenderit enim. Similique
+          praesentium nobis facere blanditiis incidunt.
+        </p>
+        <div class="articule-bottom">
+          <div>
+            <a href="">Samatha Leuthex</a>
+            <h3>May 5, 3 min read</h3>
+          </div>
+          <nav>
+            <ul>
+              <li>
+                <a href=""><img src="./imagen/icon-save.png" alt="" /></a>
+              </li>
+              <li>
+                <a href=""><img src="./imagen/icon-share.png" alt="" /></a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+      <figure><img src="./imagen/img-post-3.1.png" alt="" /></figure>
+      
+    </section>
+
+
+
+    </section>
+
+
   </main>
   <footer></footer>
 </html>
