--- a/h5.html
+++ b/h5.html
@@ -32,7 +32,13 @@
   </header>
   <main>
     <input name="text-search" type="text" placeholder="Search Article" />
+    
+    <!-- LETTERS -->
+
     <h2 class="main-title">POPULAR</h2>
+
+    <!-- MAIN ARTICULES -->
+
     <section class="main-articule">
       <div class="main-articule2">
         <h2>Feugiat sodales at nullam tellus.</h2>
@@ -61,9 +67,13 @@
       </div>
       <figure><img src="./imagen/img-post-1.png" alt="" /></figure>
     </section>
-    <section class="secondary-articules">
-      <div class="main-articule2">
-        <h2>Feugiat sodales at nullam tellus.</h2>
+
+    <!-- SECONDARIES ARTICULES -->
+
+    <section class="secondaries-articules">
+      <div class="secondarie-articules2">
+        <figure><img src="./imagen/img-post-2.png" alt="" /></figure>
+        <h2>Porta proin tellus sed pulvinar odio eu pulvinar</h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. In laborum
           modi maxime optio doloribus aliquam nemo dolor ipsum veritatis,
@@ -87,9 +97,10 @@
           </nav>
         </div>
       </div>
-      <figure><img src="./imagen/img-post-2.png" alt="" /></figure>
-      <div class="main-articule2">
-        <h2>Feugiat sodales at nullam tellus.</h2>
+
+      <div class="secondarie-articules2">
+        <figure><img src="./imagen/img-post-3.png" alt="" /></figure>
+        <h2>Non quam tortor, proin eu egestas scelerisque.</h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. In laborum
           modi maxime optio doloribus aliquam nemo dolor ipsum veritatis,
@@ -113,9 +124,10 @@
           </nav>
         </div>
       </div>
-      <figure><img src="./imagen/img-post-3.png" alt="" /></figure>
-      <div class="main-articule2">
-        <h2>Feugiat sodales at nullam tellus.</h2>
+
+      <div class="secondarie-articules2">
+        <figure><img src="./imagen/img-post-3.1.png" alt="" /></figure>
+        <h2>Amet amet sed pharetra risus sit eget interdum.</h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. In laborum
           modi maxime optio doloribus aliquam nemo dolor ipsum veritatis,
@@ -138,15 +150,51 @@
             </ul>
           </nav>
         </div>
-      </div>
-      <figure><img src="./imagen/img-post-3.1.png" alt="" /></figure>
-      
+      </div>  
     </section>
+   </section>
+
+   <!-- LETTERS -->
+   
+   <h2 class="popular-articules">SEE ALL ARTICULES</h2>
+   <h2 class="main-title">ALL ARTICULES</h2>
+
+   <!-- ALL ARTICULES -->
+
+   <section class="all-articules">
+     <div>
+    <figure><img src="./imagen/img-post-4.png" alt="" /></figure>
+    <div class="all-articules2">
+      <h2>Feugiat sodales at nullam tellus.</h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. In laborum
+        modi maxime optio doloribus aliquam nemo dolor ipsum veritatis,
+        laboriosam, excepturi voluptas reprehenderit enim. Similique
+        praesentium nobis facere blanditiis incidunt.
+      </p>
+      <div class="articule-bottom">
+        <div>
+          <a href="">Samatha Leuthex</a>
+          <h3>May 5, 3 min read</h3>
+        </div>
+        <nav>
+          <ul>
+            <li>
+              <a href=""><img src="./imagen/icon-save.png" alt="" /></a>
+            </li>
+            <li>
+              <a href=""><img src="./imagen/icon-share.png" alt="" /></a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </div>
+  </section>
 
 
 
-    </section>
-
+   
 
   </main>
   <footer></footer>
