Se terminó el footer, se puso el banner como fondo en css

--- a/h5.html
+++ b/h5.html
@@ -20,7 +20,6 @@
       </nav>
     </div>
     <div class="header-2">
-      <figure><img src="./imagen/banner.png" alt="" /></figure>
       <h2>Blog Afrianskaf</h2>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam
@@ -41,6 +40,7 @@
 
     <section class="main-articule">
       <div class="main-articule2">
+        <div>
         <h2>Feugiat sodales at nullam tellus.</h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. In laborum
@@ -48,6 +48,7 @@
           laboriosam, excepturi voluptas reprehenderit enim. Similique
           praesentium nobis facere blanditiis incidunt.
         </p>
+      </div>
         <div class="articule-bottom">
           <div>
             <a href="">Samatha Leuthex</a>
@@ -72,6 +73,7 @@
 
     <section class="secondaries-articules">
       <div class="secondarie-articules2">
+        <div>
         <figure><img src="./imagen/img-post-2.png" alt="" /></figure>
         <h2>Porta proin tellus sed pulvinar odio eu pulvinar</h2>
         <p>
@@ -80,6 +82,7 @@
           laboriosam, excepturi voluptas reprehenderit enim. Similique
           praesentium nobis facere blanditiis incidunt.
         </p>
+      </div>
         <div class="articule-bottom">
           <div>
             <a href="">Samatha Leuthex</a>
@@ -99,6 +102,7 @@
       </div>
 
       <div class="secondarie-articules2">
+        <div>
         <figure><img src="./imagen/img-post-3.png" alt="" /></figure>
         <h2>Non quam tortor, proin eu egestas scelerisque.</h2>
         <p>
@@ -107,6 +111,7 @@
           laboriosam, excepturi voluptas reprehenderit enim. Similique
           praesentium nobis facere blanditiis incidunt.
         </p>
+      </div>
         <div class="articule-bottom">
           <div>
             <a href="">Samatha Leuthex</a>
@@ -126,6 +131,7 @@
       </div>
 
       <div class="secondarie-articules2">
+        <div>
         <figure><img src="./imagen/img-post-3.1.png" alt="" /></figure>
         <h2>Amet amet sed pharetra risus sit eget interdum.</h2>
         <p>
@@ -134,6 +140,7 @@
           laboriosam, excepturi voluptas reprehenderit enim. Similique
           praesentium nobis facere blanditiis incidunt.
         </p>
+      </div>
         <div class="articule-bottom">
           <div>
             <a href="">Samatha Leuthex</a>
@@ -165,6 +172,7 @@
      <div class="all-articules2">
     <figure><img src="./imagen/img-post-4.png" alt="" /></figure>
     <div class="all-articules3">
+      <div>
       <h2>Massa eu in laoreet enim augue vulputate nunc.</h2>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. In laborum
@@ -172,6 +180,7 @@
         laboriosam, excepturi voluptas reprehenderit enim. Similique
         praesentium nobis facere blanditiis incidunt.
       </p>
+    </div>
       <div class="articule-bottom">
         <div>
           <a href="">Samatha Leuthex</a>
@@ -193,6 +202,7 @@
   <div class="all-articules2">
     <figure><img src="./imagen/img-post-5.png" alt="" /></figure>
     <div class="all-articules3">
+      <div>
       <h2>Feugiat a euismod arcu feugiat posuere morbi.</h2>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. In laborum
@@ -200,6 +210,7 @@
         laboriosam, excepturi voluptas reprehenderit enim. Similique
         praesentium nobis facere blanditiis incidunt.
       </p>
+    </div>
       <div class="articule-bottom">
         <div>
           <a href="">Samatha Leuthex</a>
@@ -221,6 +232,7 @@
   <div class="all-articules2">
     <figure><img src="./imagen/img-post-6.png" alt="" /></figure>
     <div class="all-articules3">
+      <div>
       <h2>Sociis purus pellentesque faucibus vitae et felis.</h2>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. In laborum
@@ -228,6 +240,7 @@
         laboriosam, excepturi voluptas reprehenderit enim. Similique
         praesentium nobis facere blanditiis incidunt.
       </p>
+    </div>
       <div class="articule-bottom">
         <div>
           <a href="">Samatha Leuthex</a>
@@ -249,6 +262,7 @@
   <div class="all-articules2">
     <figure><img src="./imagen/img-post-7.png" alt="" /></figure>
     <div class="all-articules3">
+      <div>
       <h2>Cursus feugiat mi pellentesque mauris sed eu.</h2>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. In laborum
@@ -256,6 +270,7 @@
         laboriosam, excepturi voluptas reprehenderit enim. Similique
         praesentium nobis facere blanditiis incidunt.
       </p>
+    </div>
       <div class="articule-bottom">
         <div>
           <a href="">Samatha Leuthex</a>
@@ -276,6 +291,7 @@
   </div>
   <div class="all-articules2">
     <figure><img src="./imagen/img-post-8.png" alt="" /></figure>
+    <div>
     <div class="all-articules3">
       <h2>A morbi arcu curabitur etiam fringilla augue.</h2>
       <p>
@@ -284,6 +300,7 @@
         laboriosam, excepturi voluptas reprehenderit enim. Similique
         praesentium nobis facere blanditiis incidunt.
       </p>
+    </div>
       <div class="articule-bottom">
         <div>
           <a href="">Samatha Leuthex</a>
@@ -310,11 +327,59 @@
        <li><a href="">New Post</a></li>
      </ul>
    </nav>
-
-
-
-   
-
   </main>
-  <footer></footer>
+  <!--FOOTER-->
+  <footer>
+    <div class="footer">
+      <div>
+      <h2>Interested to Work with our Team</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, est consequatur. Nam assumenda nobis, consequuntur minima ab consequatur dolor quae quisquam ullam modi dolores magni tempora. Suscipit animi explicabo debitis.</p>
+    </div>
+    <a href="">Let's Talk</a>
+  </div>
+    <div class="footer2">
+      <div class="afrianska">
+        <ul>
+          <li><a class="logo" href="">A</a></li>
+          <li><a class= subtitle href="">Afrianska</a></li>
+        </ul>
+        <div class="afrianska2">
+          <h3>A.</h3>
+          <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit</h3>
+          <h3>T.</h3>
+          <h3>+62-812-7313-4321</h3>
+          <h3>E.</h3>
+          <a href="mailto:hello.afrian@gmail.com">hello.afrian@gmail.com</a>
+        </div>
+      </div>
+      <div class="about-us">
+        <a class="subtitle" href="">About us</a>
+        <nav>
+          <ul class="footer-links">
+            <li><a href="">About</a></li>
+            <li><a href="">What We Do</a></li>
+            <li><a href="">Project</a></li>
+            <li><a href="">How it Work With US</a></li>
+          </ul>
+        </nav>
+      </div>
+      <div class="follow-us">
+        <a class="subtitle" href="">Follow us</a>
+        <nav>
+          <ul class="footer-links">
+            <li><a href="">Instagram</a></li>
+            <li><a href="">Facebook</a></li>
+            <li><a href="">LinkedIn</a></li>
+            <li><a href="">Youtube</a></li>
+          </ul>
+        </nav>
+      </div>
+     </div>
+
+     <h3 class="rights">
+      2020 © Afrianska Jorge Urrutia. All rights reserved.
+     </h3>
+
+
+  </footer>
 </html>
